// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:mapping 1`] = `
<div>
  <span
    class="cxd-MappingField"
  >
    <span
      class="text-muted"
    >
      -
    </span>
  </span>
</div>
`;

exports[`Renderer:mapping html 1`] = `
<div>
  <span
    class="cxd-MappingField"
  >
    <span
      class="text-muted"
    >
      -
    </span>
  </span>
</div>
`;

exports[`Renderer:mapping html 2`] = `
<div>
  <span
    class="cxd-MappingField"
  >
    <span
      class="cxd-TplField fr-view"
    >
      <span>
        <span
          class="label label-info"
        >
          漂亮
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`Renderer:mapping html 3`] = `
<div>
  <span
    class="cxd-MappingField"
  >
    <span
      class="cxd-TplField fr-view"
    >
      <span>
        其他
      </span>
    </span>
  </span>
</div>
`;
